<resources>
    <string name="app_name">30 Days Challenge</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex</string>
    <string name="welcome_back">Welcome back</string>
    <string name="challenge">Challenge</string>
    <string name="progress">1/30</string>
    <string name="hide">Hide</string>
    <string name="fill_title">Please fill title field</string>
    <string name="choose_image">Please choose image</string>
    <string name="add_new_challenge">Add new challenge</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="challenge_icon">Challenge Icon</string>
    <string name="confirm">Confirm</string>
    <string name="delete_challenge">Do you want to delete this challenge?</string>
    <string name="delete">Delete</string>
    <string name="no_str">No</string>
    <string name="yes_str">Yes</string>
    <string name="change_name">Change name</string>
    <string name="language">Language</string>
    <string name="change_language">Change language</string>
    <string name="general_settings">General settings</string>
    <string name="additional_settings">Additional settings</string>
    <string name="version">Version</string>



    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
        <item>Ukrainian</item>
        <item>Russian</item>
    </string-array>


    <string-array name="locales_array">
        <item>en</item>
        <item>es</item>
        <item>uk</item>
        <item>ru</item>
    </string-array>


</resources>